# kurl

./: .gitignore  README.md  design.html  docker-compose.yaml  setup-db.sh
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: collection.rs  mod.rs  parser.rs  request.rs
src-tauri/src/db/: mod.rs  schema.rs
src-tauri/src/models/: collection.rs  mod.rs  request.rs  response.rs
src-tauri/src/services/: http_client.rs
src-tauri/tests/: test_curl_parser.rs
src/components/: request-builder.js  response-viewer.js  save-request-modal.js  search-modal.js  sidebar.js
src/services/: api.js  resizer.js  state.js  undo-manager.js
